--- a/index.html
+++ b/index.html
@@ -475,7 +475,10 @@
     </div>
 
     <!-- ============ SCRIPTS ============ -->
-    <script src="scripts/app.js" type="module"></script>
+    <script src="scripts/storage.js"></script>
+    <script src="scripts/validators.js"></script>
+    <script src="scripts/state.js"></script>
+    <script src="scripts/app.js"></script>
 </body>
 
 </html>
